fix(seatunnel-spark-ubi9): complete image validation